--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="BoxContent">
         <header>
             <div class="IconConteiner">
-                <img src="./assets/icono.svg" alt="SlayIcono" class="Icono">
+                <img src="./images/icono.svg" alt="SlayIcono" class="Icono">
                 <p >SLAY <br> AGENCY </p>
             </div>
             <ul class="menu">
